@@ -6,7 +6,7 @@ CONFIG	+= qt warn_on release
 QT += network
 #QT +=  opengl 
 
-RESOURCES = icons.qrc
+RESOURCES = icons.qrc docs.qrc
 
 HEADERS	+= config.h \
 	constants.h \
